--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,53 +1,5 @@
 {
     "files.associations": {
-        "algorithm": "cpp",
-        "limits": "cpp",
-        "valarray": "cpp",
-        "iostream": "cpp",
-        "__hash_table": "cpp",
-        "__locale": "cpp",
-        "bitset": "cpp",
-        "complex": "cpp",
-        "execution": "cpp",
-        "memory_resource": "cpp",
-        "type_traits": "cpp",
-        "ios": "cpp",
-        "iosfwd": "cpp",
-        "istream": "cpp",
-        "locale": "cpp",
-        "mutex": "cpp",
-        "new": "cpp",
-        "optional": "cpp",
-        "ostream": "cpp",
-        "ratio": "cpp",
-        "sstream": "cpp",
-        "streambuf": "cpp",
-        "string": "cpp",
-        "string_view": "cpp",
-        "tuple": "cpp",
-        "variant": "cpp",
-        "vector": "cpp",
-        "__bit_reference": "cpp",
-        "__config": "cpp",
-        "__split_buffer": "cpp",
-        "__threading_support": "cpp",
-        "__verbose_abort": "cpp",
-        "array": "cpp",
-        "cctype": "cpp",
-        "clocale": "cpp",
-        "cmath": "cpp",
-        "cstdarg": "cpp",
-        "cstddef": "cpp",
-        "cstdint": "cpp",
-        "cstdio": "cpp",
-        "cstdlib": "cpp",
-        "cstring": "cpp",
-        "ctime": "cpp",
-        "cwchar": "cpp",
-        "cwctype": "cpp",
-        "initializer_list": "cpp",
-        "stdexcept": "cpp",
-        "typeinfo": "cpp",
-        "iterator": "cpp"
+        "socket.h": "c"
     }
 }
